[package]
name = "fluidlite-lib"
version = "0.1.3"
description = "Bundled fluidlite library"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "synth", "soundfont", "sf2", "library"]
authors = ["K. <kayo@illumium.org>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/katyo/fluidlite-rs"
edition = "2018"

[badges.travis-ci]
repository = "katyo/fluidlite-rs"

[badges.is-it-maintained-issue-resolution]
repository = "katyo/fluidlite-rs"

[badges.is-it-maintained-open-issues]
repository = "katyo/fluidlite-rs"

[badges.maintenance]
status = "passively-maintained"

[build-dependencies.fetch_unroll]
version = "^0.2"

[build-dependencies.cmake]
version = "^0.1"

[features]
shared = []
with-sf3 = []
with-stb = []
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
