[package]
name = "fluidlite-sys"
version = "0.1.0"
description = "Unsafe bindings to fluidlite library"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "synth", "soundfont", "sf2", "sf3"]
authors = ["K. <kayo@illumium.org>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/katyo/fluidlite-rs"
edition = "2018"

[build-dependencies.git2]
version = "^0.11"
optional = true

[build-dependencies.serde]
version = "^1"
features = ["derive"]
optional = true

[build-dependencies.toml]
version = "^0.5"
optional = true

[build-dependencies.bindgen]
version = "0.52"
optional = true

[features]
generate-bindings = ["git2", "serde", "toml", "bindgen"]
rustdoc = []

[package.metadata.source]
#git = "https://github.com/divideconcept/FluidLite"
#git = "https://github.com/wallneradam/FluidLite"
git = "https://github.com/katyo/FluidLite"
rev = "master"

[package.metadata.docs.rs]
features = ["rustdoc"]
