[package]
name = "fluidlite-sys"
version = "0.1.0"
description = "Unsafe bindings to fluidlite library"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "synth", "soundfont", "sf2", "sf3"]
authors = ["K. <kayo@illumium.org>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/katyo/fluidlite-rs"
edition = "2018"

[badges]
travis-ci = { repository = "katyo/fluidlite-rs" }

[build-dependencies.fetch_unroll]
version = "^0.2"
optional = true

[build-dependencies.bindgen]
version = "0.53"
optional = true

[features]
generate-bindings = ["fetch_unroll", "bindgen"]
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
