[package]
name = "fluidlite"
version = "0.1.4"
description = "Safe bindings to fluidlite library"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "synth", "soundfont", "sf2", "sf3"]
authors = ["K. <kayo@illumium.org>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/katyo/fluidlite-rs"
edition = "2018"

[badges.travis-ci]
repository = "katyo/fluidlite-rs"

[badges.is-it-maintained-issue-resolution]
repository = "katyo/fluidlite-rs"

[badges.is-it-maintained-open-issues]
repository = "katyo/fluidlite-rs"

[badges.maintenance]
status = "passively-maintained"

[dependencies]
bitflags = "^1"
num-traits = "^0.2"
num-derive = "^0.3"

[dependencies.log]
version = "^0.4"
optional = true

[dependencies.fluidlite-sys]
path = "../fluidlite-sys"
version = "0.1.4"

[dev-dependencies]
byte-slice-cast = "^1"

[dev-dependencies.fluidlite-lib]
path = "../fluidlite-lib"
version = "0.1.4"
features = ["with-sf3", "with-stb"]

[features]
generate-bindings = ["fluidlite-sys/generate-bindings"]
rustdoc = ["fluidlite-sys/rustdoc", "log"]

[package.metadata.docs.rs]
features = ["rustdoc"]
