[package]
name = "fluidlite-sys"
version = "0.2.1"
description = "Unsafe bindings to fluidlite library"
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["audio", "synth", "soundfont", "sf2", "sf3"]
authors = ["K. <kayo@illumium.org>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/katyo/fluidlite-rs"
edition = "2018"
links = "fluidlite"

[badges.maintenance]
status = "passively-maintained"

[build-dependencies.bindgen]
version = "0.60"
optional = true

[build-dependencies.pkg-config]
version = "0.3.19"
optional = true

[build-dependencies.cc]
version = "1.0.67"
features = ["parallel"]

[features]
update-bindings = ["bindgen"]
builtin = []
with-sf3 = []
with-stb = []
shared = []
static = []
rustdoc = []

[package.metadata.docs.rs]
features = ["rustdoc"]
